# touch-applifed

./: .gitignore  CMakeLists.txt  Doxyfile  INSTALL  README
debian/: api  applifed-art-tests.dirs  applifed-art-tests.install  applifed-bug-tests.dirs  applifed-bug-tests.install  applifed-functional-tests.dirs  applifed-functional-tests.install  applifed-performance-tests.dirs  applifed-performance-tests.install  applifed-testapps.dirs  applifed-testapps.install  applifed-tests.dirs  applifed-tests.install  applifed-testscripts.dirs  applifed-testscripts.install  applifed.install  applifed.postinst  changelog  control  copyright  rules
doc/: GNUmakefile  prestart.tex
examples/: example.prestart.ex
meego/: README
meego/applifed-0.20.0/: 0001-Use-usr-bin-ruby-instead-of-usr-bin-ruby1.8.patch  0002-Ship-empty-conf-file-in-MeeGo.patch  0003-Install-.desktop-file-on-MeeGo.patch  create-tarball.sh  meegotouch-applifed.changes  meegotouch-applifed.spec  meegotouch-applifed.yaml
meego/applifed-0.20.9/: create-tarball.sh  meegotouch-applifed.changes  meegotouch-applifed.spec  meegotouch-applifed.yaml
old/: applifedifadaptor.cpp  applifedifadaptor.h  applifedifadaptor.xml  applifeservice.cpp  applifeservice.h  applifeservice_p.h  prestartparser.cpp  prestartparser.h  projects.pro
prestart/: nokia.conf
src/: CMakeLists.txt  configdata.cpp  configdata.h  configparser.cpp  configparser.h  cpuload.cpp  cpuload.h  daemon.cpp  daemon.h  logger.cpp  logger.h  main.cpp  prestartapp.cpp  prestartapp.h  prestarter.cpp  prestarter.h  systemstate.cpp  systemstate.h  x11util.cpp  x11util.h
src/startup/: 69applifed
tests/: run_unit_tests_with_coverage.sh
tests/Common/: CMakeLists.txt
tests/Common/TestApps/: CMakeLists.txt
tests/Common/TestApps/fali_close/: CMakeLists.txt  com.nokia.fali_close.service  fali_close.desktop  main.cpp
tests/Common/TestApps/fali_hello/: CMakeLists.txt  com.nokia.fali_hello.service  com.nokia.fali_hello.service.sb  com.nokia.fali_hello1.service  com.nokia.fali_perf.service  fali_hello.cpp  fali_hello.desktop  fali_hello1.desktop  helloworld.pro
tests/Common/TestApps/fali_multiapp/: CMakeLists.txt  fali_multiapp.cpp
tests/Common/TestApps/fali_toc/: CMakeLists.txt  com.nokia.fali_toc.service  com.nokia.fali_toc.service.sb  fali_toc.cpp  fali_toc.desktop  fali_toc.pro
tests/Common/TestApps/memoryhog/: CMakeLists.txt  memoryhog.c  memoryhog.pro
tests/Common/TestApps/multiwindow_apps/: CMakeLists.txt
tests/Common/TestApps/multiwindow_apps/close-event/: CMakeLists.txt  close-event.pro  main.cpp
tests/Common/TestApps/multiwindow_apps/multiplewindows1/: CMakeLists.txt  README  com.nokia.fali_mw1.service  com.nokia.fali_mw2.service  main.cpp  mainpage.cpp  mainpage.h  multiplewindows1.pro  multiplewindowsifadaptor.cpp  multiwindowapplication.cpp  multiwindowapplication.h  multiwindowservice.cpp  multiwindowservice.h
tests/Common/TestApps/multiwindow_apps/multiplewindows3/: CMakeLists.txt  README  com.nokia.fali_mw3.service  main.cpp  mainpage.cpp  mainpage.h  multi1.desktop  multi2.desktop  multi3.desktop  multiplewindows.xml  multiplewindows3.pro  multiplewindowsifadaptor.h  multiwindowservice.cpp  multiwindowservice.h  mywindow.cpp  mywindow.h
tests/Common/unittests/: CMakeLists.txt  common.pri
tests/Common/unittests/ut_configdata/: CMakeLists.txt  ut_configdata.cpp  ut_configdata.h
tests/Common/unittests/ut_cpuload/: CMakeLists.txt  ut_cpuload.cpp  ut_cpuload.h
tests/Common/unittests/ut_prestartapp/: CMakeLists.txt  ut_prestartapp.cpp  ut_prestartapp.h
tests/Common/unittests/ut_prestarter/: CMakeLists.txt  ut_prestarter.cpp  ut_prestarter.h
tests/Harmattan/TestScripts/: CMakeLists.txt  cp-service.rb  fautils.rb  functest_applifed.conf  functional.drive  tc_applifed_one_instance.rb  tc_daemonize.rb  test-perf-prestart.py  ts_multi_instance.rb  ts_prestart.rb  ts_prestart_prevent.rb
tests/Harmattan/TestScripts/cpu_load/: CMakeLists.txt  cpu_load_high.drive  cpu_load_low.drive  tc_cpu_load.rb
tests/Harmattan/art-tests/: CMakeLists.txt  tests.xml
tests/Harmattan/bug-tests/: CMakeLists.txt  tests.xml
tests/Harmattan/functests/: CMakeLists.txt  tests.xml
tests/Harmattan/perftests/: CMakeLists.txt  tests.xml
tests/Harmattan/unit-tests/: CMakeLists.txt  tests.xml
tests/Meego/: CMakeLists.txt
tests/Meego/TestScripts/: CMakeLists.txt  cp-service.rb  fautils.rb  functional.drive  prevent.conf  prevent.drive  tc_applifed_one_instance.rb  tc_daemonize.rb  tc_prestart_preventing.rb  test-perf-prestart.py  test-perf.rb  ts_mwtests.rb  ts_prestart.rb
tests/Meego/TestScripts/cpu_load/: CMakeLists.txt  cpu_load.conf  cpu_load_high.drive  cpu_load_low.drive  tc_cpu_load.rb
tests/Meego/TestScripts/periodic_re_prestart/: CMakeLists.txt  periodic_re_prestart.conf  periodic_re_prestart.drive  ts_periodic_re_prestart.rb
tests/Meego/art-tests/: CMakeLists.txt  tests.xml
tests/Meego/bug-tests/: CMakeLists.txt  tests.xml
tests/Meego/functests/: CMakeLists.txt  tests.xml
tests/Meego/perftests/: CMakeLists.txt  tests.xml
tests/Meego/unit-tests/: CMakeLists.txt  tests.xml
