# Sub build: art-tests 
add_subdirectory(art-tests)

# Sub build: bug-tests
add_subdirectory(bug-tests)

# Sub build:functests 
add_subdirectory(functests)

# Sub build: perftests 
add_subdirectory(perftests)

# Sub build: TestScripts 
add_subdirectory(TestScripts)

# Sub build: unit-tests 
add_subdirectory(unit-tests)
